--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,7 @@
 	path = flight-service
 	url = https://github.com/hanusiakl/flight.service.git
 	branch = main
+[submodule "flight-web"]
+	path = flight-web
+	url = https://github.com/hanusiakl/flight.web.git
+	branch = main
